--- a/CSS/planos.css
+++ b/CSS/planos.css
@@ -9,6 +9,17 @@ body {
     background-color: #f5f5f5;
 }
 
+/* Estilos de la barra de navegación */
+.navbar {
+    transition: top 0.5s, opacity 0.5s; /* Añade una transición suave de 0.5 segundos */
+}
+
+.navbar.hidden {
+    top: -56px; /* Mueve la barra de navegación completamente fuera de la vista */
+    opacity: 0; /* Hace que la barra de navegación sea completamente transparente cuando está oculta */
+}
+
+
 .navbar {
     background-color: #6a1b9a;
 }
